--- a/SoundLove/SoundLove/custom views/ArtistRecommendView.xib
+++ b/SoundLove/SoundLove/custom views/ArtistRecommendView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F19a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -24,8 +24,8 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe um auszuwählen" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="86" translatesAutoresizingMaskIntoConstraints="NO" id="wOe-RJ-oDl">
-                    <rect key="frame" x="84.5" y="424" width="152.5" height="16"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe zum auszuwählen" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="86" translatesAutoresizingMaskIntoConstraints="NO" id="wOe-RJ-oDl">
+                    <rect key="frame" x="80" y="424" width="160" height="16"/>
                     <fontDescription key="fontDescription" name="Montserrat-Light" family="Montserrat" pointSize="13"/>
                     <color key="textColor" red="0.26666666666666666" green="0.29019607843137252" blue="0.36862745098039218" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
@@ -57,7 +57,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6rV-6L-EoP" userLabel="circle wrapper view">
-                    <rect key="frame" x="15" y="113.5" width="290" height="290"/>
+                    <rect key="frame" x="15" y="114" width="290" height="290"/>
                     <subviews>
                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QbJ-lQ-PEL" userLabel="image wrapper view">
                             <rect key="frame" x="20" y="20" width="250" height="250"/>
@@ -67,10 +67,10 @@
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </imageView>
                                 <view alpha="0.89999999999999991" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C4Z-wM-HEP">
-                                    <rect key="frame" x="0.0" y="199" width="250" height="51"/>
+                                    <rect key="frame" x="0.0" y="228" width="250" height="22"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" fjksdb lkdvsnlkdv n lkvnlk nlkvds" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="150" translatesAutoresizingMaskIntoConstraints="NO" id="MN2-V2-PDe">
-                                            <rect key="frame" x="65" y="2" width="120" height="29"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="150" translatesAutoresizingMaskIntoConstraints="NO" id="MN2-V2-PDe">
+                                            <rect key="frame" x="65" y="2" width="120" height="0.0"/>
                                             <fontDescription key="fontDescription" name="Montserrat-Light" family="Montserrat" pointSize="12"/>
                                             <color key="textColor" red="0.41176470590000003" green="0.91107859260000001" blue="0.5568627451" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -143,7 +143,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wir haben leider gerade keine empfohlenen Künstler vorliegen." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="190" translatesAutoresizingMaskIntoConstraints="NO" id="mcw-om-WjY">
-                                    <rect key="frame" x="50" y="144" width="190" height="50.5"/>
+                                    <rect key="frame" x="50" y="144" width="190" height="51"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="190" id="fRe-Yb-LlE"/>
                                     </constraints>
@@ -177,7 +177,7 @@
                     </constraints>
                 </view>
                 <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="leftSlide" translatesAutoresizingMaskIntoConstraints="NO" id="HiR-hr-YuN">
-                    <rect key="frame" x="143.5" y="455" width="33" height="69"/>
+                    <rect key="frame" x="144" y="455" width="33" height="69"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="33" id="57P-rC-mDf"/>
                         <constraint firstAttribute="height" constant="69" id="lfe-9g-ZwO"/>
@@ -218,7 +218,7 @@
                 <outlet property="middleDotCircleView" destination="mME-08-D2i" id="kiS-X3-Fnh"/>
                 <outlet property="middleSmallCircleView" destination="hdt-BF-tbG" id="djX-Ma-maL"/>
             </connections>
-            <point key="canvasLocation" x="-2770" y="468"/>
+            <point key="canvasLocation" x="-2602" y="391"/>
         </view>
     </objects>
     <resources>
