--- a/SoundLove/SoundLove/custom views/ConcertsTableViewCell.xib
+++ b/SoundLove/SoundLove/custom views/ConcertsTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F19a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -40,25 +40,25 @@
                         </state>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ab 35,00 €" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="176" translatesAutoresizingMaskIntoConstraints="NO" id="UNp-e8-aj4">
-                        <rect key="frame" x="70" y="50" width="176" height="13"/>
+                        <rect key="frame" x="70" y="49" width="176" height="13"/>
                         <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="10"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="in 20 Tagen" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="176" translatesAutoresizingMaskIntoConstraints="NO" id="KlV-1s-jJt">
-                        <rect key="frame" x="70" y="35" width="176" height="13"/>
+                        <rect key="frame" x="70" y="36" width="176" height="13"/>
                         <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="10"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gräfenhainichen, DE" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="176" translatesAutoresizingMaskIntoConstraints="NO" id="BMG-LO-Tkp">
-                        <rect key="frame" x="70" y="20" width="176" height="13"/>
+                        <rect key="frame" x="70" y="23" width="176" height="13"/>
                         <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="10"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MELT!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="176" translatesAutoresizingMaskIntoConstraints="NO" id="KIQ-OM-Bkl">
-                        <rect key="frame" x="70" y="1" width="176" height="15"/>
+                        <rect key="frame" x="70" y="8" width="176" height="15"/>
                         <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="12"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -67,20 +67,20 @@
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="lBz-Fj-1Ob" secondAttribute="trailing" constant="14" id="1BY-mF-vf8"/>
                     <constraint firstItem="lBz-Fj-1Ob" firstAttribute="leading" secondItem="KIQ-OM-Bkl" secondAttribute="trailing" constant="10" id="1jB-qW-aWY"/>
-                    <constraint firstAttribute="centerY" secondItem="KIQ-OM-Bkl" secondAttribute="centerY" multiplier="4:1" id="5JM-q5-oc5"/>
+                    <constraint firstAttribute="centerY" secondItem="KIQ-OM-Bkl" secondAttribute="centerY" multiplier="4:1" constant="-27.25" id="5JM-q5-oc5"/>
                     <constraint firstItem="BMG-LO-Tkp" firstAttribute="leading" secondItem="HYr-Ms-gYs" secondAttribute="trailing" constant="10" id="LGy-lE-TLo"/>
                     <constraint firstItem="HYr-Ms-gYs" firstAttribute="leading" secondItem="Rc4-FE-aNI" secondAttribute="leading" constant="15" id="OFt-Yq-KPM"/>
                     <constraint firstItem="lBz-Fj-1Ob" firstAttribute="leading" secondItem="BMG-LO-Tkp" secondAttribute="trailing" constant="10" id="SZ6-AJ-7Dq"/>
                     <constraint firstItem="lBz-Fj-1Ob" firstAttribute="leading" secondItem="KlV-1s-jJt" secondAttribute="trailing" constant="10" id="SdD-cR-Bz1"/>
-                    <constraint firstItem="UNp-e8-aj4" firstAttribute="top" secondItem="KlV-1s-jJt" secondAttribute="bottom" constant="2" id="V6f-Rc-Ef2"/>
+                    <constraint firstItem="UNp-e8-aj4" firstAttribute="top" secondItem="KlV-1s-jJt" secondAttribute="bottom" id="V6f-Rc-Ef2"/>
                     <constraint firstItem="lBz-Fj-1Ob" firstAttribute="leading" secondItem="UNp-e8-aj4" secondAttribute="trailing" constant="10" id="c1D-pD-vG7"/>
                     <constraint firstItem="KlV-1s-jJt" firstAttribute="leading" secondItem="HYr-Ms-gYs" secondAttribute="trailing" constant="10" id="dxi-UX-L3L"/>
                     <constraint firstItem="KIQ-OM-Bkl" firstAttribute="leading" secondItem="HYr-Ms-gYs" secondAttribute="trailing" constant="10" id="edT-vh-kOQ"/>
                     <constraint firstItem="UNp-e8-aj4" firstAttribute="leading" secondItem="HYr-Ms-gYs" secondAttribute="trailing" constant="10" id="f4i-Tj-C9k"/>
                     <constraint firstAttribute="centerY" secondItem="HYr-Ms-gYs" secondAttribute="centerY" id="hIe-Fc-r8K"/>
-                    <constraint firstAttribute="centerY" secondItem="BMG-LO-Tkp" secondAttribute="centerY" multiplier="4:3" id="jOY-TE-fhE"/>
+                    <constraint firstAttribute="centerY" secondItem="BMG-LO-Tkp" secondAttribute="centerY" multiplier="4:3" constant="-4.5833333333333286" id="jOY-TE-fhE"/>
                     <constraint firstAttribute="centerY" secondItem="lBz-Fj-1Ob" secondAttribute="centerY" id="kuO-L2-Jo5"/>
-                    <constraint firstItem="KlV-1s-jJt" firstAttribute="top" secondItem="BMG-LO-Tkp" secondAttribute="bottom" constant="2" id="l7L-dS-01E"/>
+                    <constraint firstItem="KlV-1s-jJt" firstAttribute="top" secondItem="BMG-LO-Tkp" secondAttribute="bottom" id="l7L-dS-01E"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
